2009-03-06  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/textbuffer.{ccg,hg} (TextBuffer::[gs]et_rich_text_format):
	Remove Maemo-specific methods which have been superseded by the
	generic TextBuffer serialization facilities.
	(TextBuffer::set_rich_text_format_all): ditto,
	(TextBuffer::[gs]et_can_paste_rich_text): ditto.

2009-03-06  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/enums.hg (Gtk::Hildon::SizeType): New Maemo-specific
	enumeration corresponding to HildonSizeType.
	(Gtk::Hildon::InputMode): New Maemo-specific enumeration
	corresponding to HildonGtkInputMode.

2009-03-06  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/gtk_enums_maemo.defs: New separate defs file for the
	changes in the Maemo fork of GTK+.
	* gtk/src/gtk_methods_maemo.defs: Likewise.
	* gtk/src/gtk.defs: Include the Maemo defs files.
	* gtk/src/Makefile.am (files_defs): Add the new defs files.

2009-02-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/builder.hg: get_widget_derived():
	* gtk/src/builder.ccg: get_widget_checked(): Take a reference on 
	the widget received from gtk_builder_get_object() because it does 
	not give one.

2009-01-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/stock.cc: Actually define and initialize 
	ORIENTATION_PORTRAIT, ORIENTATION_LANDSCAPE, 
	ORIENTATION_REVERSE_LANDSCAPE, and ORIENTATION_REVERSE_PORTRAIT, 
	avoiding undefined reference errors when trying to use these.
	Bug #568416 (Tao Wang).

2009-01-01  Armin Burgmeier  <armin@openismus.com>

	* gtk/src/printer.ccg (SignalProxy_Custom_gtk_callback): Take a new
	reference on the passed printer object, so that we don't unref it at
	the end of the function (Tor Krill).

2.14.3:

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Restored the GtkHandleBox::child-attached 
	signal definition and the GtkLinkButton::visited property definition, 
	so these are really put in the API. At some point in 2.14.x we lost 
	these.

2.14.2:
