@@ -537,6 +537,12 @@ Glib::ustring TextBuffer::get_text(bool include_hidden_chars)
   return get_text(begin(), end(), include_hidden_chars);
 }
 
+Glib::ustring TextBuffer::get_text(bool include_hidden_chars) const
+{
+  TextBuffer* unconst = const_cast<TextBuffer*>(this); //Because begin() and end() are not const.
+  return get_text(unconst->begin(), unconst->end(), include_hidden_chars);
+}
+
 Glib::StringArrayHandle TextBuffer::get_serialize_formats() const
 {
   int n_atoms = 0;
